# Proyecto-Nexus

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  nexus-pr.yml  notify-discord.yml
agents/: Dockerfile  approval_handler.py  bot_runner.py  db.py  discord_bot.py  github_client.py  intake.py  jira_client.py  main.py  pyproject.toml
agents/graph/: graph.py  state.py
agents/graph/nodes/: __init__.py  analyst.py  designer.py  developer.py  reviewer.py
agents/tests/: test_app_flow.py  test_nodes.py
docs/: github-actions.md
infra/postgres/: init.sql
infra/redis/: redis.conf
nexus-generated/47f05b74/: output.md
src/: app.module.ts
src/auth/: AuthController.ts  AuthService.ts
tests/auth/: AuthService.test.ts
